SE Resume Changed to have descriptors for everything

--- a/SE Resume.html
+++ b/SE Resume.html
@@ -10,7 +10,7 @@
         <div align="center">
             <h2>Samuel Lieuwen</h2>
             <p>
-                2042 Memorial Dr<br>
+                2042 Memorial Dr.<br>
                 Howard, WI 54303<br>
                 (715) 450-5766<br>
                 samlieuwen12@gmail.com
@@ -34,23 +34,18 @@
             </div>
             <div>
                 Programming in C# - 2 years<br>
-                AP Computer Science - Java<br>
-                NWTC Intro to Cybersecurity
-            </div>
-            <div>
-                <b>Projects:</b>
-            </div>
-            <div>
-                Blackjack - C#<br>
-                Moonlander - Java<br>
-                Connect 4 - Java
-            </div>
-            <div>    
-                <b>Grades:</b>
-            </div>
-            <div>    
-                4 / 5 - AP Comp Science grade<br>
-                B+ - Intro to Cybersecurity
+                &emsp; - &emsp; Blackjack: A complete version of blackjack that runs through the console window.
+                Alongside a standard 52 card deck creation the game includes a double down feature aswell as the split function.
+                This was started as a final project for a class but was finished outside of school.<br>
+                AP Computer Science: 4/5 AP Test Score - Java<br>
+                &emsp; - &emsp; Lunar Lander: A console game that was built for a school project, Lunar Lander is what it sounds like
+                You are trying to land a space ship. You have to utilize your fuel to slow the velocity of the ship down enough to 
+                safely land the ship.<br>
+                &emsp; - &emsp; Connect 4: It's Connect 4 built as a console game, you play against a friend to connect 4 of your markers
+                before your opponent does. This variant has a full graphic with red and yellow markers.<br>
+                NWTC Intro to Cybersecurity - Final Grade: B+<br>
+                &emsp; - &emsp; This class featured a lot of the basic information to cybersecurity. The class featured brief lessons on 
+                how to protect yourself, to full scale encryption at various levels throughout the industry.
             </div>
             <div>    
                 <b>Work Experience:</b>
@@ -58,7 +53,10 @@
             <div>
                 <b>Jeff Lieuwen Land Surveying,</b> Crivitz, WI<b> &emsp; May 2019 - Present</b><br>
                 <i>Head of Technology</i><br>
-                &emsp; - &emsp; Maintain, adapt, and communicate everything to do with technology within the business
+                &emsp; - &emsp; Maintain, adapt, and communicate everything to do with technology within the business. Recently we have
+                completely transformed his technology department. Previously he was using 3 different computers and no server to run his
+                business now he has a new server and desktop to take his productivity and overall experience to another level. In the 
+                future we have plans to build another desktop for an employee to help with the land mapping process.
             </div>
         </div>
     </body>
