--- a/BA Resume.html
+++ b/BA Resume.html
@@ -34,15 +34,32 @@
             </div>
             <div>
                 Programming in C# - 2 years<br>
-                AP Computer Science - Java<br>
-                NWTC Intro to Cybersecurity
+                &emsp; - &emsp; Blackjack: A complete version of blackjack that runs through the console window.
+                Alongside a standard 52 card deck creation the game includes a double down feature aswell as the split function.
+                This was started as a final project for a class but was finished outside of school.<br>
+                AP Computer Science: 4/5 AP Test Score - Java<br>
+                &emsp; - &emsp; Lunar Lander: A console game that was built for a school project, Lunar Lander is what it sounds like
+                You are trying to land a space ship. You have to utilize your fuel to slow the velocity of the ship down enough to 
+                safely land the ship.<br>
+                &emsp; - &emsp; Connect 4: It's Connect 4 built as a console game, you play against a friend to connect 4 of your markers
+                before your opponent does. This variant has a full graphic with red and yellow markers.<br>
+                NWTC Intro to Cybersecurity - Final Grade: B+<br>
+                &emsp; - &emsp; This class featured a lot of the basic information to cybersecurity. The class featured brief lessons on 
+                how to protect yourself, to full scale encryption at various levels throughout the industry.
             </div>
             <div>    
                 <b>Extracurriculars and Achievements:</b>
             </div>
             <div>    
-                Cross Country Captain (10, 12)<br>
-                Built and managed the first annual Youth Pirate Invitational Cross Country Run
+                Cross Country Captain (10, 12): Alongside 3 other captains we lead the team for pretty much everything, daily agenda, scheduling,
+                warmups, etc.<br>
+                Built and managed the first annual Youth Pirate Invitational Cross Country Run<br>
+                &emsp; - &emsp; The coaches have been trying to do a youth run 
+                as a fundraiser for years, but it wasn't until this year that they felt the team captains were qualified enough to go through 
+                with this plan. So we as captains were tasked to gather and outsource all of the information needed to make this event happen. 
+                We made and distributed flyers, sourced T-shirts, tracked signup orders pretty much everything. By the end of the day the 
+                fundraiser was a huge success for the Bay Port Cross Country program and they will continue to run the fundraiser for years 
+                to come.
             </div>
             <div>    
                 <b>Work Experience:</b>
@@ -50,7 +67,10 @@
             <div>
                 <b>Jeff Lieuwen Land Surveying,</b> Crivitz, WI<b> &emsp; May 2019 - Present</b><br>
                 <i>Head of Technology</i><br>
-                &emsp; - &emsp; Maintain, adapt, and communicate everything to do with technology within the business
+                &emsp; - &emsp; Maintain, adapt, and communicate everything to do with technology within the business. Recently we have
+                completely transformed his technology department. Previously he was using 3 different computers and no server to run his
+                business now he has a new server and desktop to take his productivity and overall experience to another level. In the 
+                future we have plans to build another desktop for an employee to help with the land mapping process.
             </div>
         </div>
     </body>
