--- a/SE Resume.html
+++ b/SE Resume.html
@@ -54,7 +54,7 @@
                 <b>Jeff Lieuwen Land Surveying,</b> Crivitz, WI<b> &emsp; May 2019 - Present</b><br>
                 <i>Head of Technology</i><br>
                 &emsp; - &emsp; Maintain, adapt, and communicate everything to do with technology within the business. Recently we have
-                completely transformed his technology department. Previously he was using 3 different computers and no server to run his
+                completely transformed his technology department. Previously he used 3 different computers and no server to run his
                 business now he has a new server and desktop to take his productivity and overall experience to another level. In the 
                 future we have plans to build another desktop for an employee to help with the land mapping process.
             </div>
